fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -472,6 +472,8 @@ input[type='submit']:hover, button:hover {
     margin: 0 auto;
 }
 #section-4-content {
+	width: 100%;
+	max-width: 100%;
     text-align: left;
     overflow-x: scroll;
     overflow-y: hidden;
